@@ -1,4 +1,11 @@
 
+Изменения в nginx 1.10.1                                          31.05.2016
+
+    *) Безопасность: при записи тела специально созданного запроса во
+       временный файл в рабочем процессе мог происходить segmentation fault
+       (CVE-2016-4450); ошибка появилась в 1.3.9.
+
+
 Изменения в nginx 1.10.0                                          26.04.2016
 
     *) Стабильная ветка 1.10.x.
